--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,25 @@
 @use 'variaveis';
 @use 'hero';
+@use 'shows';
+@use 'plans';
+
+@font-face{
+    font-family: Avenir;
+    src: url(../../assets/fonts/Avenir-Regular.woff2);
+    font-weight: 400;
+}
+
+@font-face{
+    font-family: Avenir;
+    src: url(../../assets/fonts/Avenir-Bold.woff2);
+    font-weight: 700;
+}
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Avenir, sans-serif;
 }
 
 body{
@@ -50,4 +65,19 @@ body{
 
 .title--small{
     @include title(28px);
+}
+
+.button{
+    display: block;
+    width: 100%;
+    height: 60px;
+    font-size: 18px;
+    background-color: #6421ff;
+    color: variaveis.$corSecundaria;
+    text-transform: uppercase;
+    border-radius: 4px;
+    margin-top: 2vw;
+    margin-bottom: 8px;
+    border: none;
+    cursor: pointer;
 }
