--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -10,6 +10,10 @@
         grid-template-columns: 1fr 1fr 1fr;
         gap: 24px;
         list-style: none;
+
+        @media (max-width: 768px) {
+            grid-template-columns: 1fr 1fr;
+        }
         &__item{
             img{
                 max-width: 100%;
@@ -25,6 +29,12 @@
     &__tabs{
         display: flex;
         justify-content: center;
+
+        @media (max-width: 768px) {
+            white-space: nowrap;
+            overflow-x: scroll;
+            padding-left: 20px;
+        }
         &__button{
             color: variaveis.$corSecundaria;
             font-size: 20px;
@@ -37,6 +47,10 @@
 
             &--is-active{
                 border-bottom: 5px solid variaveis.$corSecundaria;
+            }
+
+            @media (max-width: 768px){
+                font-size: 16px;
             }
         }
     }
