--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,3 +1,6 @@
 $bgColor: #040714;
 $corPrincipal: silver;
 $corSecundaria: #f9f9f9;
+$corDeFundoBotaoPrimario: #6421ff;
+$corDeFundoBotaoSecundario: #0063e5;
+$corDeFundoBotaoDark: #000;
